# crassify

./: .gitattributes  MANIFEST.in  README.md  Snakefile  condaenv.dyyju483.requirements.txt  config.yaml  crassify.py  df_so_far.csv  environment.yaml  environment.yml  matches_metadata.csv  matrix_what_is_happening.csv  metadata_melt.csv  protein_dict.csv  pyproject.toml  setup.py  what_is_happening_DF.csv
crassify/: Snakefile  __init__.py  cli.py
crassify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crassify_04.08.2023_17:45:17/: dists.csv  genome_hits.csv  protein_hits.csv
crassify_06.08.2023_21:40:18/: protein_hits.csv
crassify_08.08.2023_16:57/: decentree_NJ.newick
crassify_09.08.2023_17:51/: feature_metadata.tsv
crassify_11.07.2023_14:22:15/: dists.csv  genome_hits.csv  protein_hits.csv
crassify_output/: df_so_far.csv  dists.csv  genome_hits.csv  protein_best_hits.csv  protein_hits.csv  taxonomy_best_hit.csv
data/: crassify_DB_2025.dmnd
database/: CRASSIFY_DB.dmnd
diamond_hits/: matches.tsv  matches_AT10B.tsv
pooled_proteomes/: pooled_proteomes.faa
proteomes/: AT10B_S15_NODE_1_length_45468_cov_7.faa  AT60_S4_NODE_1_length_56564_cov_17.faa  AT6CD3_S11_NODE_1_length_40506_cov_6.faa  BA2_S12_NODE_1_length_51717_cov_5.faa  BC2_S2_NODE_1_length_59166_cov_57.faa  BK2_S4_NODE_5_length_12138_cov_30.328994.faa  CD1_S6_NODE_1_length_24461_cov_77.faa  CD2_S15_NODE_22_length_6698_cov_50.faa  CG5_S8_NODE_1_length_66368_cov_6.faa  CR10_S3_NODE_1_length_183431_cov_8.faa  CR10_S3_NODE_2_length_41934_cov_17.faa  (+11 more)
(+111 files in other folders)
